# crimp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/scout-robot/: README.md  manifest.json
schema/: manifest.schema.json
src/crimp/: __init__.py  cli.py  manifest.py  server.py
src/crimp/generators/: assembly.py  bom.py  commissioning.py  pinout.py  wireviz_gen.py
src/crimp/templates/: base.html  index.html  step_card.html
tests/: test_assembly_generator.py  test_bom_generator.py  test_commissioning_generator.py  test_manifest.py  test_pinout_generator.py  test_scout_manifest.py  test_server.py  test_wireviz_generator.py
tests/fixtures/: minimal.json
