[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crimp-manifest"
version = "0.1.0-alpha"
description = "AI-native hardware manifest tool for robot builders and makers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "jsonschema>=4.0",
    "rich>=13.0",
]

[project.optional-dependencies]
diagrams = ["wireviz"]
serve = ["fastapi>=0.111", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9"]
dev = ["pytest", "pytest-cov", "ruff", "fastapi>=0.111", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9", "httpx>=0.27"]

[project.scripts]
crimp = "crimp.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/crimp"]

[tool.ruff]
line-length = 88
